--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" href="images/noto-v1_pot-of-food.svg" />
+    <script src="https://kit.fontawesome.com/6c5a856459.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <!--conteiner-->
@@ -21,13 +22,13 @@
                     <a href="index.html">
                         <li class="active">Home</li>
                     </a>
-                    <a href="">
+                    <a href="index.html">
                         <li>Menu</li>
                     </a>
-                    <a href="">
+                    <a href="index.html">
                         <li>Reservation</li>
                     </a>
-                    <a href="">
+                    <a href="index.html">
                         <li>Contact</li>
                     </a>
                 </ul>
@@ -45,5 +46,79 @@
                 <button class="button1">ONLINE ORDER</button>
             </div>
             </section>
+
+            <!--section2-->
+        <section class="section2">
+            <div class="div_for_images">
+                <div class="img_div">
+                    <img src="images/Rectangle 2.png" alt="" class="section2image">
+                    <div class="blurdiv">
+                        <i class="fa-solid fa-utensils"></i>
+                        <h5>MOUTH WHATERING FOOD</h5>
+                    </div>
+                </div>
+                <div class="img_div">
+                    <img src="images/Rectangle 3.png" alt="" class="section2image">
+                    <div class="blurdiv">
+                        <i class="fa-solid fa-mug-hot"></i>
+                        <h5>DEDICATED & ATTENDING STAFF</h5>
+                    </div>
+                </div>
+                <div class="img_div">
+                    <img src="images/Rectangle 4.png" alt="" class="section2image">
+                    <div class="blurdiv">
+                        <i class="fa-solid fa-bed"></i>
+                        <h5>RELAXING ATMOSPHERE</h5>
+                    </div>
+                </div>
+            </div>
+            <article>
+                <h3>Discover Our Story</h3>
+                <p class="section2_text"> Our story starts with you. Right here. At our table. Welcome to True Food
+                    Kitchen.
+                    True Food Kitchen is the only restaurant fundamentally based on science which ensures all of its
+                    craveable dishes and drinks work to increase the longevity of our people and planet.</p>
+                <button>
+                    <p class="button_text">LEARN MORE</p>
+                </button>
+            </article>
+        </section>
+
+         <!-- footer -->
+         <footer>
+            <div class="footer_div_text">
+                <h4>FOOD</h4>
+                 <a href="index.html">
+                    <p class="footer_text">Menu</p>
+                </a>
+                <a href="index.html">
+                    <p class="footer_text">Catering Nutritionals and Allergens</p>
+                </a>
+                <a href="index.html">
+                    <p class="footer_text">Good Slice Pizza</p>
+                </a>
+            </div>
+            <div class="contact_box">
+                <h4>Connect With Us </h4>
+                <div class="socials">
+                    <a href="https://instagram.com" class="social_icons" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://linkedin.com" class="social_icons" target="_blank">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="https://facebook.com" class="social_icons" target="_blank">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                    <a href="https://tiktok.com" class="social_icons" target="_blank">
+                        <i class="fa-brands fa-tiktok"></i>
+                    </a>
+                </div>
+
+            </div>
+
+        </footer>
+    </div>
+</div>
   </body>
 </html>
